c/src/test/resources/syntax/bad/NoRun.ctrl
<controlFile>
<sourceFile name="foo.c" id="1" />
</controlFile>
